# FunG

./: .appveyor.yml  .clang-format  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Doxyfile  Headers.cmake  README.md  addMissingOperators_8hh_source.html  addTransposedMatrix_8hh_source.html  adiposeTissue__SommerHolzapfel_8hh.html  adiposeTissue__SommerHolzapfel_8hh_source.html  annotated.html  arcsine_8hh_source.html  at_8hh_source.html  base_8hh_source.html  chain_8hh_source.html  chainer_8hh_source.html  classRFFGen_1_1LinearAlgebra_1_1DynamicSizeDeterminant-members.html  classRFFGen_1_1LinearAlgebra_1_1DynamicSizeDeterminant.html  classRFFGen_1_1LinearAlgebra_1_1LeftCauchyGreenStrainTensor-members.html  classRFFGen_1_1LinearAlgebra_1_1LeftCauchyGreenStrainTensor.html  classRFFGen_1_1LinearAlgebra_1_1LinearizedStrainTensor-members.html  classRFFGen_1_1LinearAlgebra_1_1LinearizedStrainTensor.html  classRFFGen_1_1LinearAlgebra_1_1SecondPrincipalInvariant-members.html  classRFFGen_1_1LinearAlgebra_1_1SecondPrincipalInvariant.html  classRFFGen_1_1LinearAlgebra_1_1ShiftedInvariant-members.html  classRFFGen_1_1LinearAlgebra_1_1ShiftedInvariant.html  classRFFGen_1_1LinearAlgebra_1_1StrainTensor-members.html  classRFFGen_1_1LinearAlgebra_1_1StrainTensor.html  classRFFGen_1_1NonSymmetricMatrixException-members.html  classRFFGen_1_1NonSymmetricMatrixException.html  classRFFGen_1_1OutOfDomainException-members.html  classRFFGen_1_1OutOfDomainException.html  classes.html  cofactor_8hh_source.html  computeChain_8hh_source.html  computeProduct_8hh_source.html  computeScale_8hh_source.html  (+163 more)
FunG/: FunG.hh  conceptCheck.hh  concepts.hh  constant.hh  finalize.hh  generate.hh  identity.hh  linearAlgebra.hh  math.hh  operations.hh  variable.hh
RFFGen/: concepts.hh  constant.hh  finalize.hh  generate.hh  identity.hh  linearAlgebra.hh  math.hh  operations.hh  variable.hh
cmake/: CodeCoverage.cmake  Coveralls.cmake  CoverallsClear.cmake  CoverallsGenerateGcov.cmake  FindEigen3.cmake  FindFunG.cmake  FunGConfig.cmake  FunGConfig.cmake.in  FunGConfigVersion.cmake.in
config/: publish-doc.sh  travisci_rsa.enc  travisci_rsa.pub
content/: contact.html  details.html  examples-adipose-tissue.html  examples-nonlinear-heat.html  examples-scalar.html  examples-two-variables.html  get-fung.html  home.html
css/: styles.css
doc/: bib24247.aux  bib9671.aux  citelist.doc24275  documentation.dox  mainpage.dox
fung/: concept_check.hh  concepts.hh  constant.hh  finalize.hh  fung.hh  generate.hh  identity.hh  linear_algebra.hh  math.hh  operations.hh  variable.hh
html/: ADComparison_8hh_source.html  ADComparison__Example__1_8hh_source.html  ADComparison__Example__2_8hh_source.html  ADComparison__Example__3_8hh_source.html  ADComparison__Example__4_8hh_source.html  ADComparison__Example__5_8hh_source.html  FunG_8hh_source.html  RFFGen_2concepts_8hh_source.html  RFFGen_2identity_8hh_source.html  RFFGen_8hh_source.html  _formulas.tex  addMissingOperators_8hh_source.html  addTransposedMatrix_8hh_source.html  add__missing__operators_8hh.html  add__missing__operators_8hh_source.html  add__transposed__matrix_8hh.html  add__transposed__matrix_8hh_source.html  adiposeTissue__SommerHolzapfel_8hh.html  adiposeTissue__SommerHolzapfel_8hh_source.html  adipose__tissue__sommer__holzapfel_8hh.html  adipose__tissue__sommer__holzapfel_8hh_source.html  annotated.html  arcsine_8hh.html  arcsine_8hh_source.html  at_8hh.html  at_8hh_source.html  base_8hh.html  base_8hh_source.html  chain_8hh.html  chain_8hh_source.html  chainer_8hh.html  chainer_8hh_source.html  citelist.html  classFunG_1_1Detail_1_1CheckFormula.html  classFunG_1_1LinearAlgebra_1_1Deviator-members.html  classFunG_1_1LinearAlgebra_1_1Deviator.html  classFunG_1_1LinearAlgebra_1_1DynamicSizeDeterminant-members.html  classFunG_1_1LinearAlgebra_1_1DynamicSizeDeterminant.html  classFunG_1_1LinearAlgebra_1_1LeftCauchyGreenStrainTensor-members.html  classFunG_1_1LinearAlgebra_1_1LeftCauchyGreenStrainTensor.html  (+614 more)
js/: loadContent.js  tables.js
latex/: add__missing__operators_8hh.tex  adiposeTissue__SommerHolzapfel_8hh.tex  adipose__tissue__sommer__holzapfel_8hh.tex  annotated.tex  base_8hh.tex  chain_8hh.tex  chainer_8hh.tex  citelist.tex  classFunG_1_1Detail_1_1CheckFormula.tex  classFunG_1_1LinearAlgebra_1_1Deviator.eps  classFunG_1_1LinearAlgebra_1_1Deviator.tex  classFunG_1_1LinearAlgebra_1_1DynamicSizeDeterminant.eps  classFunG_1_1LinearAlgebra_1_1DynamicSizeDeterminant.tex  classFunG_1_1LinearAlgebra_1_1LeftCauchyGreenStrainTensor.eps  classFunG_1_1LinearAlgebra_1_1LeftCauchyGreenStrainTensor.tex  (+397 more)
test/: CMakeLists.txt
test/CMath/: CMakeLists.txt  arcsine_unittest.cpp  cosine_unittest.cpp  exp_unittest.cpp  log_unittest.cpp  pow_unittest.cpp  sine_unittest.cpp  tan_unittest.cpp
test/CMath-build/: CMakeCache.txt  Makefile  Project.cbp  cmake_install.cmake
test/Examples/: exampleTest_Armadillo.cpp  exampleTest_DUNE.cpp  exampleTest_DynamicArmadillo.cpp  exampleTest_DynamicEigen.cpp  exampleTest_Eigen.cpp
test/MathematicalOperations/: chain_unittest.cpp  product_unittest.cpp  scale_unittest.cpp  squared_unittest.cpp  sum_unittest.cpp
test/cmath/: arccos.cpp  arcsine.cpp  arcsine_unittest.cpp  cosine.cpp  cosine_unittest.cpp  erf.cpp  exp.cpp  exp_unittest.cpp  log.cpp  log_unittest.cpp  max.cpp  min.cpp  pow.cpp  pow_unittest.cpp  sine.cpp  sine_unittest.cpp  tan.cpp  tan_unittest.cpp
test/cmath/texify/: arccos.cpp  arcsine.cpp  cosine.cpp  exp.cpp  log.cpp  pow.cpp  sine.cpp  tan.cpp
test/examples/: exampleTest_DynamicEigen.cpp  exampleTest_Eigen.cpp
test/fung/: bulk_update.cpp  function_interface.cpp  variable.cpp  variable_unittest.cpp
test/linear_algebra/: cofactor.cpp  determinant.cpp  determinant_unittest.cpp  tracking_type.cpp
test/linear_algebra/texify/: cofactor.cpp  determinant.cpp  frobenius_norm.cpp  trace.cpp  transpose.cpp
test/mathematical_operations/: chain.cpp  chain_unittest.cpp  dot.cpp  product.cpp  product_unittest.cpp  scale.cpp  scale_unittest.cpp  squared.cpp  squared_unittest.cpp  sum.cpp  sum_unittest.cpp
(+1524 files in other folders)
